# gitcp

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: error.rs  ignore_file.rs  lib.rs  main.rs  opt.rs  source.rs
