[package]
name = "gitcp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.2.0"
flate2 = "1.0.24"
fs_extra = "1.2.0"
globset = "0.4.9"
globwalk = "0.8.1"
reqwest = "0.11.11"
structopt = "0.3.26"
tar = "0.4.38"
tempfile = "3.3.0"
tokio = { version = "1.20.1", features = ["full"] }
