[package]
name = "gitcp"
version = "0.2.0"
edition = "2021"
description = "Copy files from Git repository to local."
homepage = "https://github.com/r7kamura/gitcp"
license = "MIT"
readme = "README.md"
repository = "https://github.com/r7kamura/gitcp"
include = ["src/**/*", "LICENSE.txt", "README.md"]

[dependencies]
bytes = "1.2.0"
flate2 = "1.0.24"
fs_extra = "1.2.0"
globset = "0.4.9"
globwalk = "0.8.1"
reqwest = "0.11.11"
structopt = "0.3.26"
tar = "0.4.38"
tempfile = "3.3.0"
tokio = { version = "1.20.1", features = ["full"] }
